# RustPanel

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  buf.gen.yaml  package.json  tsconfig.scripts.json
.githooks/: pre-commit
.github/workflows/: admin-deploy.yml  backend.yml  ghcr-cleanup.yml  web-deploy.yml
deploy/: .env.example  docker-compose.ghcr.yml  install.sh  uninstall.sh  update.sh
deploy/github-runner/: README.md  docker-compose.yml  entrypoint.sh
docs/guide/: getting-started.md  nat-vps-deployment.md
docs/guides/: code-review-process.md  development-workflow.md  versioning.md
docs/planning/: admin-schema-migration-status.md  observations.md  tasks-template.md  tasks-v2.0-architecture-evolution.md  tasks-v3.0-free-version-alignment.md  tasks-v4.0-baota-gap-closure.md
docs/roles/: 01-system-architect.md  02-security-engineer.md  03-backend-engineer.md  04-ios-engineer.md  05-android-engineer.md  06-macos-engineer.md  07-windows-engineer.md  08-frontend-engineer.md  09-devops-engineer.md  10-qa-engineer.md  11-product-manager.md  12-ux-ui-designer.md  13-i18n-specialist.md  14-compliance-advisor.md  15-data-acquisition-specialist.md
docs/specs/: admin-resource-schema.md
docs/specs/architecture/: pattern-selection-standard.md
github-runner/: .env.example  Dockerfile  README.md  docker-compose.yml
proto/rustpanel/v1/: accesslog.proto  appstore.proto  audit.proto  auth.proto  backup.proto  capability.proto  cluster.proto  common.proto  cron.proto  db.proto  dns.proto  docker.proto  fs.proto  monitor.proto  notification.proto  proxy.proto  rollback.proto  security.proto  site.proto  ssl.proto  system.proto  terminal.proto  toolbox.proto  user.proto  vsmtp.proto  workload.proto
scripts/: build-version.ts  check-latest-ci.ts  cleanup-ghcr-package-versions.ts  collect-buildkit-cache-imports.ts  github-actions-guard.ts  publish-micro-release.ts  sync-release-version.ts  validate-buildkit-local-cache.ts  verify-all.sh  warm-docker-base-images.sh
src/backend/: Cargo.toml  Dockerfile  build.rs
src/backend/src/: access_log.rs  acme.rs  appstore.rs  assets.rs  audit.rs  auth.rs  backup.rs  capability.rs  cli.rs  cluster.rs  cron.rs  database.rs  dns.rs  docker.rs  files.rs  lib.rs  main.rs  monitor.rs  notification.rs  proxy.rs  rollback.rs  runtime.rs  security.rs  site.rs  ssl.rs  terminal.rs  toolbox.rs  user.rs  vsmtp.rs  workload.rs
src/web/: index.html  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  main.tsx  styles.css
src/web/src/components/: theme-provider.tsx  theme-toggle.tsx
src/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  sheet.tsx  switch.tsx  table.tsx  tabs.tsx  tooltip.tsx
src/web/src/lib/: format.test.ts  format.ts  rpc.ts
src/web/src/store/: monitor.ts
