[package]
name = "rustpanel-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "rustpanel-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
bollard = "0.17"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
daemonize = "0.5"
flate2 = "1"
futures-core = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
instant-acme = "0.7"
jsonwebtoken = "9"
mime_guess = "2"
portable-pty = "0.8"
prost = "0.13"
prost-types = "0.13"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["any", "json", "mysql", "postgres", "runtime-tokio", "sqlite"] }
sysinfo = "0.30"
tar = "0.4"
tera = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-cron-scheduler = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tonic = "0.12"
tonic-web = "0.12"
tower = { version = "0.5", features = ["make", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
