[package]
name = "rustpanel-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "rustpanel-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
bollard = "0.17"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
daemonize = "0.5"
data-encoding = "2.11"
flate2 = "1"
futures-core = "0.3"
futures-util = "0.3"
hmac = "0.12"
http-body-util = "0.1"
instant-acme = "0.8"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
mime_guess = "2"
portable-pty = "0.8"
prost = "0.13"
prost-types = "0.13"
rcgen = "0.13"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
regex = "1"
# 通知告警出站 HTTP(Webhook/Telegram/钉钉/企业微信/Bark)。走 rustls + 内置根证书,
# 不引 openssl,适配最小镜像;复用已在树里的 rustls/hyper。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["any", "json", "mysql", "postgres", "runtime-tokio", "sqlite"] }
sysinfo = "0.30"
tar = "0.4"
tera = "1"
thiserror = "2"
# rcgen 0.13 内部就用 time;直接 depend 一份对齐版本,设 not_after 用。
time = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-cron-scheduler = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tonic = "0.12"
tonic-web = "0.12"
tower = { version = "0.5", features = ["make", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
